ajout de bc de chose

--- a/experiences.html
+++ b/experiences.html
@@ -7,9 +7,11 @@
     <title>Expériences</title>
 </head>
 <body>
-    <section class="section-experiences detail-page">
+    <nav class="detail-page-nav">
+        <a class="back-link" href="index.html">← Retour au portfolio</a>
+    </nav>
+    <section class="section-experiences detail-page with-fixed-nav">
         <div class="container">
-            <a class="back-link" href="index.html">← Retour au portfolio</a>
             <div class="experiences-list">
                 <article class="experience-card experience-detail" id="experience-api-arte">
                     <h2>Job Étudiant - ARTE Strasbourg</h2>
@@ -115,29 +117,64 @@
 
                 <article class="experience-card large" id="experience-cineclub">
                     <div class="experience-images">
-                        <img class="exp-img top" src="image/image.png" alt="Projection ciné-club" />
-                        <img class="exp-img middle" src="image/image.png" alt="Équipe du ciné-club" />
-                        <img class="exp-img bottom" src="image/image.png" alt="Organisation d'une séance" />
+                        <img class="exp-img top" src="image/cine1.jpg" alt="Projection ciné-club" />
+                        <img class="exp-img middle" src="image/cine2.jpg" alt="Équipe du ciné-club" />
+                        <img class="exp-img bottom" src="image/cine3.jpg" alt="Organisation d'une séance" />
                     </div>
                     <div class="experience-content">
-                        <h2>Ciné-club</h2>
-                        <p class="experience-date">2023 - 2025</p>
-                        <p>Participation active à l’animation du ciné-club : sélection des films, préparation des soirées, animations de débats et communication auprès des membres.</p>
-                        <p class="detail-highlight">Cette section accueillera une galerie photo dédiée et un récit plus détaillé des missions au fur et à mesure de leur rédaction.</p>
+                        <h2>Ciné-club associatif</h2>
+                        <p class="experience-date">2023 – 2025</p>
+                        <p class="detail-intro">Membre actif d’un ciné-club local où j’ai participé à la préparation et à la gestion technique des projections hebdomadaires.</p>
+
+                        <div class="detail-section">
+                            <h3>Missions principales</h3>
+                            <ul>
+                                <li>Installation du matériel de projection et de sonorisation.</li>
+                                <li>Participation à la sélection des films et à la création des affiches de séances.</li>
+                                <li>Animation de débats et échanges après les projections.</li>
+                                <li>Communication sur les réseaux sociaux du club.</li>
+                            </ul>
+                        </div>
+
+                        <div class="detail-section">
+                            <h3>Compétences développées</h3>
+                            <ul>
+                                <li>Travail en équipe et gestion d’événements.</li>
+                                <li>Maîtrise du matériel audiovisuel (projecteur, table de mixage, micros, etc.).</li>
+                                <li>Organisation, créativité et communication orale.</li>
+                            </ul>
+                        </div>
+
+                        <p class="detail-highlight">Cette expérience m’a permis de combiner mes intérêts pour la technique et la culture, tout en apprenant à gérer des projets collectifs.</p>
                     </div>
                 </article>
 
                 <article class="experience-card large" id="experience-42">
                     <div class="experience-images">
-                        <img class="exp-img top" src="image/image.png" alt="Travail en pair-programming" />
-                        <img class="exp-img middle" src="image/image.png" alt="Campus 42" />
-                        <img class="exp-img bottom" src="image/image.png" alt="Session de code" />
+                        <img class="exp-img top" src="image/42-campus.jpg" alt="Travail en pair-programming" />
+                        <img class="exp-img middle" src="image/42-group.jpg" alt="Campus 42" />
+                        <img class="exp-img bottom" src="image/42-code.jpg" alt="Session de code" />
                     </div>
                     <div class="experience-content">
-                        <h2>Formation 42</h2>
-                        <p class="experience-date">2025</p>
-                        <p>Immersion au sein de l’école 42 pour découvrir l’apprentissage par projets, le pair-programming et la gestion collective des challenges techniques.</p>
-                        <p class="detail-highlight">Ajoutez ici vos clichés favoris et complétez la description quand vous serez prêt.</p>
+                        <h2>Immersion à l’École 42</h2>
+                        <p class="experience-date">Été 2025</p>
+                        <p class="detail-intro">Découverte de la pédagogie innovante de l’école 42 à travers une immersion courte axée sur le pair-programming, la logique et la résolution de problèmes.</p>
+
+                        <div class="detail-section">
+                            <h3>Découvertes et apprentissages</h3>
+                            <ul>
+                                <li>Apprentissage autonome à partir de projets concrets.</li>
+                                <li>Travail en équipe pour résoudre des défis techniques.</li>
+                                <li>Initiation à la gestion du code collaboratif (Git, shell, C).</li>
+                            </ul>
+                        </div>
+
+                        <div class="detail-section">
+                            <h3>Ce que j’en retiens</h3>
+                            <p>Cette immersion m’a confirmé mon goût pour la logique, la rigueur et la recherche d’efficacité dans le code. J’y ai découvert une nouvelle approche de l’apprentissage par la pratique et la coopération.</p>
+                        </div>
+
+                        <p class="detail-highlight">Une expérience intense qui m’a donné envie de poursuivre dans le domaine des réseaux, de la cybersécurité et du développement système.</p>
                     </div>
                 </article>
             </div>
