--- a/formations.html
+++ b/formations.html
@@ -7,9 +7,11 @@
     <title>Formations</title>
 </head>
 <body>
-    <section class="section-formation detail-page">
+    <nav class="detail-page-nav">
+        <a class="back-link" href="index.html">← Retour au portfolio</a>
+    </nav>
+    <section class="section-formation detail-page with-fixed-nav">
         <div class="container">
-            <a class="back-link" href="index.html">← Retour au portfolio</a>
             <p class="section-intro">Parcourez les formations et certifications qui structurent mon profil technique, de la STI2D à la validation PIX.</p>
             <div class="experiences-list">
                 <article class="experience-card experience-detail" id="bac">
