--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
                 <!-- Détails -->
                 <aside class="formation-details">
                     <h3>Détails de la formation</h3>
-                    <p class="placeholder">Survolez une formation pour voir les détails...</p>
+                    <div class="placeholder">
+                        <p>Survolez une formation pour voir les détails...</p>
+                        <p>Clicker sur le nom d'une formation pour accéder à la page dédiée.</p>
+                    </div>
                     
                     <div class="detail-content" id="detail-bac">
                         <h4>Lycée STI2D – Heinrich Nessel (Haguenau)</h4>
@@ -164,7 +167,7 @@
                         <h3>Job Étudiant - ARTE</h3>
                         <p class="experience-date">Août 2025</p>
                         <p>Travail en restauration au sein des bâtiments d’ARTE à Strasbourg pour le prestataire API. Je participais à la préparation en légumerie, à l’aide à la cafétéria, à la plonge et au nettoyage des espaces. J’ai appris à respecter strictement les règles d’hygiène et de sécurité, à organiser mon travail efficacement et à maintenir un bon rythme dans un environnement exigeant. Cette expérience m’a permis de développer ma rigueur, mon autonomie et mon sens du travail en équipe.</p>
-                        <a href="experiences.html#experience-api-arte">Voir plus d'expériences</a>
+                        <a class="accent-link" href="experiences.html#experience-api-arte">Voir plus d'expériences</a>
                     </div>
                 </article>
 
@@ -174,11 +177,13 @@
                         <h3>Ciné-club</h3>
                         <p class="experience-date">2023-2025</p>
                         <p>Participation active à un ciné-club, organisation de séances, discussion et analyse de films, développement de compétences en communication et travail en groupe.</p>
+                        <a class="accent-link" href="experiences.html#experience-cineclub">Voir plus d'expériences</a>
                     </article>
                     <article class="experience-card small">
                         <h3>Formation 42</h3>
                         <p class="experience-date">2025</p>
                         <p>Expérience pratique à 42, apprentissage de la programmation, collaboration sur des projets en pair-programming et développement de compétences en résolution de problèmes complexes.</p>
+                        <a class="accent-link" href="experiences.html#experience-42">Voir plus d'expériences</a>
                     </article>
                 </div>
             </div>
