ajout de bc de chose

--- a/experiences.html
+++ b/experiences.html
@@ -156,8 +156,8 @@
                         <img class="exp-img bottom" src="image/42-code.jpg" alt="Session de code" />
                     </div>
                     <div class="experience-content">
-                        <h2>Immersion à l’École 42</h2>
-                        <p class="experience-date">Été 2025</p>
+                        <h2>Piscine 42</h2>
+                        <p class="experience-date">Juillet 2025</p>
                         <p class="detail-intro">Découverte de la pédagogie innovante de l’école 42 à travers une immersion courte axée sur le pair-programming, la logique et la résolution de problèmes.</p>
 
                         <div class="detail-section">
