--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="detail-page-nav">
+        <a class="back-link" href="experiences.html">experiences</a>
+        <a class="back-link" href="formations.html">formations</a>
+    </nav>
     <!-- Présentation -->
     <header class="presentation">
         <!-- Photo de profil circulaire -->
@@ -21,22 +25,6 @@
                 <p class="subtitle">Étudiant en 1re année de BUT Réseaux et Télécommunications</p>
                 <p>Je m'appelle Louis Erb, j'ai 18 ans et je suis né le 31 octobre 2007. Actuellement en première année de BUT Réseaux et Télécommunications, j'ai acquis des compétences en administration réseau, développement web et cybersécurité. Je fais partie d'un ciné-club et j'ai aussi suivi une formation pratique à 42, ce qui m'a permis de développer l'autonomie, la collaboration et la résolution de problèmes complexes.</p>
                 <p class="location-link">Basé à <a href="https://maps.google.com/?q=Mulhouse" target="_blank" rel="noreferrer">Mulhouse</a>, originaire de Strasbourg · Mobile dans tout le Grand Est</p>
-            </div>
-            
-            <!-- Boutons de navigation circulaires -->
-            <div class="buttons-container">
-                <a href="#formation">
-                    <button class="nav-button" data-text="Formation">F</button>
-                </a>
-                <a href="#experiences">
-                    <button class="nav-button" data-text="Expériences">E</button>
-                </a>
-                <a href="#competences">
-                    <button class="nav-button" data-text="Compétences">C</button>
-                </a>
-                <a href="#contact">
-                    <button class="nav-button" data-text="Contact">I</button>
-                </a>
             </div>
         </div>
     </header>
@@ -154,7 +142,7 @@
     <!-- Expériences professionnelles -->
     <section id="experiences" class="section-experiences">
         <div class="container">
-            <h2>Expériences Professionnelles</h2>
+            <h2>Expériences</h2>
             <div class="experiences-list">
                 <!-- Grande carte en haut -->
                 <article class="experience-card large">
@@ -180,8 +168,8 @@
                         <a class="accent-link" href="experiences.html#experience-cineclub">Voir plus d'expériences</a>
                     </article>
                     <article class="experience-card small">
-                        <h3>Formation 42</h3>
-                        <p class="experience-date">2025</p>
+                        <h3>Piscine 42</h3>
+                        <p class="experience-date">Juillet 2025</p>
                         <p>Expérience pratique à 42, apprentissage de la programmation, collaboration sur des projets en pair-programming et développement de compétences en résolution de problèmes complexes.</p>
                         <a class="accent-link" href="experiences.html#experience-42">Voir plus d'expériences</a>
                     </article>
