--- a/experiences.html
+++ b/experiences.html
@@ -8,24 +8,40 @@
 </head>
 <body>
     <nav class="detail-page-nav">
-        <a class="back-link" href="index.html">← Retour au portfolio</a>
+        <div class="nav-item">
+            <a class="back-link" href="index.html">Accueil</a>
+            <div class="nav-submenu">
+                <a href="index.html#formation">Formation & diplômes</a>
+                <a href="index.html#experiences">Aperçu expériences</a>
+                <a href="index.html#competences">Compétences & contact</a>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a class="back-link" href="formations.html">Formations</a>
+            <div class="nav-submenu">
+                <a href="formations.html#bac">Bac STI2D</a>
+                <a href="formations.html#pix">Certification PIX</a>
+                <a href="formations.html#autoformation">Autoformation</a>
+                <a href="formations.html#but1">BUT RT 1</a>
+                <a href="formations.html#but2">Parcours Dev&nbsp;Cloud</a>
+                <a href="formations.html#objectifs">Objectifs futurs</a>
+            </div>
+        </div>
     </nav>
     <section class="section-experiences detail-page with-fixed-nav">
         <div class="container">
             <div class="experiences-list">
-                <article class="experience-card experience-detail" id="experience-api-arte">
+                                <article class="experience-card experience-detail" id="experience-api-arte">
                     <h2>Job Étudiant - ARTE Strasbourg</h2>
-                    <p class="experience-date">Août 2025 · Prestataire API</p>
-                    <p class="detail-intro">Stage en restauration collective au sein des locaux d’ARTE : missions polyvalentes entre légumerie, cafétéria, plonge et entretien des espaces communs.</p>
+                    <p class="experience-date">Août 2025 · Prestataire API Restauration</p>
+                    <p><strong>Expérience professionnelle</strong></p>
+                    <p class="detail-intro">Expérience en restauration collective au sein du siège européen d'ARTE à Strasbourg. Missions polyvalentes en légumerie, cafétéria, plonge et entretien des espaces communs dans un environnement professionnel exigeant.</p>
 
                     <div class="detail-section">
-                        <h3>Entreprise & lieu</h3>
-                        <ul>
-                            <li>Site : <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">arte.tv</a> – Siège européen à Strasbourg.</li>
-                            <li>Employeur : <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration</a>, prestataire restauration d’entreprise.</li>
-                            <li>Adresse du site : <a href="https://maps.google.com/?q=ARTE,+67000+Strasbourg" target="_blank" rel="noreferrer">4 quai du Chanoine Winterer, 67000 Strasbourg</a>.</li>
-                            <li>Encadrement : équipe de cuisine API dirigée par le responsable de production.</li>
-                        </ul>
+                        <h3>Contexte professionnel</h3>
+                        <p><strong>Entreprise :</strong> API Restauration, prestataire de restauration collective pour le siège d'ARTE.</p>
+                        <p><strong>Lieu :</strong> 4 quai du Chanoine Winterer, 67000 Strasbourg – Siège européen de la chaîne franco-allemande.</p>
+                        <p><strong>Encadrement :</strong> Équipe de cuisine professionnelle dirigée par le responsable de production.</p>
                     </div>
 
                     <div class="detail-section" id="actions">
@@ -35,17 +51,23 @@
                             <div class="day-card">
                                 <h4>Jour type 1</h4>
                                 <ul>
-                                    <li>Je commençais en légumerie puis j’aidais à la cafétéria.</li>
-                                    <li>Ensuite, je faisais le nettoyage de la légumerie et des poubelles avant la pause repas.</li>
-                                    <li>L’après-midi, je rangeais la vaisselle du service et je terminais par le nettoyage de la salle à manger.</li>
+                                    <li>Travail en légumerie</li>
+                                    <li>Soutien à la cafétéria</li>
+                                    <li>Nettoyage de la légumerie</li>
+                                    <li>Évacuation des poubelles</li>
+                                    <li>Pause repas</li>
+                                    <li>Rangement de la vaisselle du service</li>
+                                    <li>Nettoyage de la salle à manger</li>
                                 </ul>
                             </div>
                             <div class="day-card">
                                 <h4>Jour type 2</h4>
                                 <ul>
-                                    <li>Je commençais en légumerie, puis j’allais en plonge pour nettoyer la vaisselle.</li>
-                                    <li>Après cela, j’avais la pause repas, puis je rangeais les ustensiles de cuisine.</li>
-                                    <li>Je finissais par le nettoyage des chariots.</li>
+                                    <li>Travail en légumerie</li>
+                                    <li>Plonge</li>
+                                    <li>Pause repas</li>
+                                    <li>Rangement des ustensiles de cuisine</li>
+                                    <li>Nettoyage des chariots</li>
                                 </ul>
                             </div>
                         </div>
@@ -53,16 +75,30 @@
                         <p>J’ai appris à effectuer toutes ces tâches en respectant les consignes de sécurité et en appliquant les règles d’hygiène.</p>
                     </div>
 
-                    <div class="detail-section">
-                        <h3>Ce que j’ai réussi et mes difficultés</h3>
-                        <p>Je me suis bien adapté au travail et à l’équipe. J’ai fait de mon mieux chaque jour. J’ai réussi à suivre le rythme de l’équipe et à apprendre les techniques nécessaires pour l’exécution de mes tâches, même si au début c’était un peu dur. J’ai fait quelques erreurs, mais je me suis vite amélioré.</p>
-                        <p>Le plus difficile était de maintenir le rythme toute la journée avec l’accumulation de fatigue. À la fin, j’ai réussi à m’y faire.</p>
+                                        <div class="detail-section">
+                        <h3>Réussites et défis</h3>
+                        <p><strong>Points positifs :</strong></p>
+                        <ul>
+                            <li>Adaptation rapide au rythme de travail et à l'environnement professionnel</li>
+                            <li>Intégration réussie au sein de l'équipe de cuisine</li>
+                            <li>Acquisition des techniques et protocoles de travail malgré un apprentissage intensif</li>
+                            <li>Amélioration progressive et correction rapide des erreurs initiales</li>
+                        </ul>
+                        <p><strong>Difficultés rencontrées :</strong></p>
+                        <ul>
+                            <li>Maintien du rythme soutenu tout au long de la journée</li>
+                            <li>Gestion de la fatigue physique accumulée</li>
+                            <li>Adaptation aux exigences strictes d'hygiène et de sécurité</li>
+                        </ul>
                     </div>
 
                     <div class="detail-section">
-                        <h3>Ce que je referais différemment</h3>
-                        <p>Si je devais le refaire, je prendrais un peu plus de temps au début pour observer avant de me lancer. Je pense que ça m’aurait aidé à être à l’aise plus vite.</p>
-                        <p>J’essaierais aussi de mieux gérer mon énergie sur la journée pour en conserver jusqu’à la fin du service.</p>
+                        <h3>Axes d'amélioration identifiés</h3>
+                        <ul>
+                            <li>Prendre davantage le temps d'observer les méthodes de travail avant de les appliquer</li>
+                            <li>Optimiser la gestion de l'énergie pour maintenir un niveau de performance constant</li>
+                            <li>Anticiper les pics d'activité pour mieux répartir l'effort physique</li>
+                        </ul>
                     </div>
 
                     <div class="detail-section">
@@ -124,6 +160,7 @@
                     <div class="experience-content">
                         <h2>Ciné-club associatif</h2>
                         <p class="experience-date">2023 – 2025</p>
+                        <p><strong>Expérience personnelle</strong></p>
                         <p class="detail-intro">Membre actif d’un ciné-club local où j’ai participé à la préparation et à la gestion technique des projections hebdomadaires.</p>
 
                         <div class="detail-section">
@@ -149,32 +186,43 @@
                     </div>
                 </article>
 
-                <article class="experience-card large" id="experience-42">
+                                <article class="experience-card large" id="experience-42">
                     <div class="experience-images">
                         <img class="exp-img top" src="image/42-campus.jpg" alt="Travail en pair-programming" />
                         <img class="exp-img middle" src="image/42-group.jpg" alt="Campus 42" />
                         <img class="exp-img bottom" src="image/42-code.jpg" alt="Session de code" />
                     </div>
                     <div class="experience-content">
-                        <h2>Piscine 42</h2>
-                        <p class="experience-date">Juillet 2025</p>
-                        <p class="detail-intro">Découverte de la pédagogie innovante de l’école 42 à travers une immersion courte axée sur le pair-programming, la logique et la résolution de problèmes.</p>
+                        <h2>Piscine 42 - École 42 Mulhouse</h2>
+                        <p class="experience-date">Juillet 2025 · Concours d'entrée réussi</p>
+                        <p><strong>Expérience personnelle</strong></p>
+                        <p class="detail-intro">Participation à la Piscine de l'école 42, un bootcamp intensif de sélection. <strong>Réussite aux tests d'entrée</strong> et validation de l'accès à la formation 42. Immersion totale dans la pédagogie par projet basée sur le pair-programming, l'autonomie et la résolution de problèmes complexes.</p>
 
                         <div class="detail-section">
-                            <h3>Découvertes et apprentissages</h3>
+                            <h3>Déroulement et résultats</h3>
+                            <p><strong>Format :</strong> 4 semaines d'immersion intensive (26 jours consécutifs)</p>
+                            <p><strong>Résultat :</strong> Concours d'entrée validé - Admission à l'école 42</p>
+                            <p><strong>Méthodologie :</strong> Apprentissage 100% autonome par projets progressifs en langage C</p>
+                        </div>
+
+                        <div class="detail-section">
+                            <h3>Compétences acquises</h3>
                             <ul>
-                                <li>Apprentissage autonome à partir de projets concrets.</li>
-                                <li>Travail en équipe pour résoudre des défis techniques.</li>
-                                <li>Initiation à la gestion du code collaboratif (Git, shell, C).</li>
+                                <li>Programmation en C : manipulation de pointeurs, allocation mémoire, structures de données</li>
+                                <li>Travail en pair-programming pour résoudre des défis algorithmiques</li>
+                                <li>Maîtrise des outils collaboratifs : Git, shell Unix, compilation</li>
+                                <li>Autonomie dans l'apprentissage et la recherche de solutions</li>
+                                <li>Gestion du temps et de la pression dans un environnement intensif</li>
                             </ul>
                         </div>
 
                         <div class="detail-section">
-                            <h3>Ce que j’en retiens</h3>
-                            <p>Cette immersion m’a confirmé mon goût pour la logique, la rigueur et la recherche d’efficacité dans le code. J’y ai découvert une nouvelle approche de l’apprentissage par la pratique et la coopération.</p>
+                            <h3>Bilan de l'expérience</h3>
+                            <p>Cette immersion a confirmé mon goût pour la logique algorithmique, la rigueur et la recherche d'efficacité dans le code. J'y ai découvert une approche innovante de l'apprentissage par la pratique intensive et la coopération entre pairs.</p>
+                            <p>La validation de ce concours d'entrée démontre ma capacité à relever des défis techniques exigeants et à m'adapter rapidement à des environnements de travail intensifs.</p>
                         </div>
 
-                        <p class="detail-highlight">Une expérience intense qui m’a donné envie de poursuivre dans le domaine des réseaux, de la cybersécurité et du développement système.</p>
+                        <p class="detail-highlight">Expérience formatrice qui a renforcé ma motivation à poursuivre dans les domaines des réseaux, de la cybersécurité et du développement système.</p>
                     </div>
                 </article>
             </div>
@@ -184,6 +232,15 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Louis Erb - Tous droits réservés</p>
+            <h3>Liens utiles</h3>
+            <div>
+                <p>
+                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
+                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
+                    <a href="https://maps.google.com/?q=ARTE,+67000+Strasbourg" target="_blank" rel="noreferrer">Localiser ARTE Strasbourg   ---   </a>
+                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
+                </p>
+            </div>
         </div>
     </footer>
 </body>
